Fix tag directory layout on tablet

--- a/client/assets/stylesheets/_tags.sass
+++ b/client/assets/stylesheets/_tags.sass
@@ -57,7 +57,7 @@
 
   .tagged-in
     @extend .col-xs-4
-    @extend .col-md-12
+    @extend .col-sm-12
 
     font-size: 15px
     color: $dark-grey
